// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> disabled renders a disabled input 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 kWxLGz"
        color="shade.980"
        data-testid="ds-text"
        disabled=""
        value=""
        width="medium"
      >
        Label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cOOVRp Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
          disabled=""
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cZHZGG Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 jnjFuj"
              color="shade.980"
              data-testid="ds-text"
              disabled=""
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 dabfkj Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              disabled=""
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 nuHEy Sizeweb__Size-sc-10bl685-0 htlLka"
          disabled=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 iqcLxO"
      >
        <label
          class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 gIDqtt"
          color="shade.980"
          data-testid="ds-text"
          value=""
          width="medium"
        >
          Example label
        </label>
      </div>
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 elHTOk Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 kmIVkY Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 idFfeI"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="medium"
      >
        Example label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 elHTOk Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 kmIVkY Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on top(default) and variant outlined 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 gIDCSE"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="medium"
      >
        Example label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cOOVRp Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cZHZGG Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 gmJCvQ"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Example label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bzzJhg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> placeholder renders input with default placeholder if not provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 gIDCSE"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="medium"
      >
        Label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cOOVRp Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cZHZGG Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 gmJCvQ"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bzzJhg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> placeholder renders input with provided placeholder 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 gIDCSE"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="medium"
      >
        Label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cOOVRp Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cZHZGG Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 gmJCvQ"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bzzJhg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Example Placeholder"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant renders filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 idFfeI"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="medium"
      >
        Label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 elHTOk Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 kmIVkY Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant renders outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 gIDCSE"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="medium"
      >
        Label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cOOVRp Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cZHZGG Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 gmJCvQ"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bzzJhg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 gIDCSE"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="auto"
      >
        Label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 fsjcxB"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cOOVRp Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cZHZGG Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 gmJCvQ"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="auto"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 juRaGm Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bzzJhg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 gIDCSE"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="medium"
      >
        Label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cOOVRp Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cZHZGG Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 gmJCvQ"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bzzJhg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 caucDL Spaceweb__Space-njatzl-0 eDHZqM"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 Labelweb__RegularLabelText-jw60wd-2 gIDCSE"
        color="shade.980"
        data-testid="ds-text"
        value=""
        width="small"
      >
        Label
      </label>
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cOOVRp Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 bPNzzG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cZHZGG Spaceweb__Space-njatzl-0 eDHZqM"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 gmJCvQ"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="small"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 eRcLdB Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 bzzJhg Sizeweb__Size-sc-10bl685-0 fYTMIh Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              placeholder="Enter text here"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;
